# EXAGE

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  conanfile.txt  default.exlevel  imgui.ini  vcpkg.json  xmake.lua
assets/template/: CMakeLists.txt
assets/template/assets/levels/: default.exlevel
cmake/: conan.cmake  install-config.cmake  install-rules.cmake  variables.cmake
exitor/: CMakeLists.txt  xmake.lua
exitor/assets/template/: CMakeLists.txt
exitor/cmake/: install-rules.cmake
exitor/src/: Editor.cpp  Editor.h  main.cpp
exitor/src/Dialogs/: FileDialog.cpp  FileDialog.h  FolderDialog.cpp  FolderDialog.h
exitor/src/Filesystem/: VFS.cpp  VFS.h
exitor/src/LevelEditor/: LevelEditor.cpp  LevelEditor.h
exitor/src/LevelEditor/MousePicking/: MousePicking.h  Ray.h
exitor/src/LevelEditor/Panels/: ComponentEditor.cpp  ComponentList.cpp  ContentBrowser.cpp  Hierarchy.cpp  LevelPanel.cpp  LevelPanel.h
exitor/src/MousePicking/: MousePicking.h  Ray.h
exitor/src/Panels/: ComponentEditor.cpp  ComponentEditor.h  ComponentList.cpp  ComponentList.h  ContentBrowser.cpp  ContentBrowser.h  Hierarchy.cpp  Hierarchy.h
exitor/src/ProjectSelector/: ProjectSelector.cpp  ProjectSelector.h
exitor/src/Stages/: AssetImport.cpp  AssetImport.h  ProjectSelector.cpp  ProjectSelector.h
exitor/src/Windows/: TextureViewer.cpp  TextureViewer.h
exitor/src/utils/: files.h  gui.cpp  gui.h
include/Core/: Core.h  Debug.h  Window.h
include/Filesystem/: Directories.h
include/Graphics/: Buffer.h  CommandBuffer.h  Commands.h  Context.h  Error.h  FrameBuffer.h  Pipeline.h  Queue.h  ResourceManager.h  Shader.h  Swapchain.h  Texture.cpp  Texture.h
include/Graphics/HLPD/: ImGui.h  ImGuiTools.h
include/Graphics/Utils/: BufferTypes.h  QueueCommand.h
include/Input/: KeyCode.h
include/Scene/: Entity.h  Hierarchy.h  Scene.h
include/exage/Core/: Core.h  Debug.h  Errors.h  Event.h  Timer.h  Window.h  debugbreak.h
include/exage/Filesystem/: Directories.h
include/exage/GUI/: Fonts.h  ImGui.h  RmlUi.h
include/exage/Graphics/: BindlessResources.h  Buffer.h  CommandBuffer.h  Commands.h  Context.h  Error.h  Fence.h  FrameBuffer.h  Pipeline.h  Queue.h  ResourceManager.h  Sampler.h  Shader.h  Swapchain.h  Texture.cpp  Texture.h
include/exage/Graphics/HLPD/: ImGuiTools.h  RmlUi.h
include/exage/Graphics/Utils/: BufferTypes.h  QueueCommand.h  RAII.h  SlotBuffer.h  VirtualAllocator.h
include/exage/Input/: KeyCode.h
include/exage/Projects/: Level.h  Project.h  Scripting.h  Serialization.h
include/exage/Renderer/: GeometryData.h  Locations.h  RenderSettings.h  Renderer.h  SceneData.h
include/exage/Renderer/CameraRenderer/: CameraRenderer.h
include/exage/Renderer/ForwardPass/: ForwardRenderer.h
include/exage/Renderer/GeometryPass/: GeometryRenderer.h  MeshSystem.h
include/exage/Renderer/LightingPass/: DirectLightingSystem.h  LightingRenderer.h
include/exage/Renderer/Scene/: AssetCache.h  Camera.h  Light.h  Material.h  Mesh.h  SceneBuffer.h  SceneData.h  SlotBuffer.h  StaticMesh.h  Transform.h
include/exage/Scene/: Entity.h  Hierarchy.h  Rotation3D.h  Scene.h
include/exage/System/: Clipboard.h  Cursor.h  Event.h  Window.h
include/exage/utils/: apiType.h  classes.h  flags.h  glm.h  hash.h  imgui.h  math.h  serialization.h  string.h  variant.h
include/utils/: apiType.h  cast.h  classes.h  flags.h  variant.h
platform/GLFW/: GLFWindow.cpp  GLFWindow.h
platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanQueue.cpp  VulkanQueue.h  VulkanResourceManager.cpp  VulkanResourceManager.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.h
shaders/: camera.shader  debug.shader
shaders/exage/: bindless.shader
shaders/exage/general/: fullscreen.vert  fullscreen.vert.spv
shaders/exage/geometry_pass/: mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
shaders/exage/shadow_pass/: directional_mesh.vert.spv  point_mesh.frag  point_mesh.frag.spv  point_mesh.vert.spv
shaders/geometry_pass/: mesh.frag  mesh.vert
shaders/lighting_pass/: direct.frag  direct.frag.spv
shaders/shadow_pass/: directional_mesh.vert  point_mesh.frag  point_mesh.geom  point_mesh.vert
src/Core/: Core.cpp  Debug.cpp  Timer.cpp  Window.cpp
src/Filesystem/: Directories.cpp
src/GUI/: Fonts.cpp  ImGui.cpp  RmlUi.cpp
src/GUI/ImGuiPlatform/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/Graphics/: CommandBuffer.cpp  GraphicsContext.cpp  Shader.cpp  Texture.cpp
src/Graphics/HLPD/: ImGui.cpp  ImGuiTools.cpp  RmlUi.cpp
src/Graphics/Utils/: BufferTypes.cpp  QueueCommand.cpp  SlotBuffer.cpp  VirtualAllocator.cpp
src/Projects/: Level.cpp  Project.cpp  Serialization.cpp
src/Renderer/: Renderer.cpp
src/Renderer/ForwardPass/: ForwardRenderer.cpp
src/Renderer/GeometryPass/: GeometryRenderer.cpp  MeshSystem.cpp
src/Renderer/LightingPass/: DirectLightingSystem.cpp  LightingRenderer.cpp
src/Renderer/Scene/: Camera.cpp  SceneBuffer.cpp
src/Renderer/SceneRenderer/: SceneRenderer.cpp
src/Renderer/ShadowPass/: DirectionalShadowSystem.cpp  MeshShadowSystem.cpp  PointShadowSystem.cpp  ShadowRenderer.cpp
src/Renderer/Utils/: Fonts.cpp
src/Scene/: Entity.cpp  Rotation3D.cpp  Scene.cpp
src/System/: Clipboard.cpp  Window.cpp
src/platform/GLFW/: GLFWClipboard.cpp  GLFWCursor.cpp  GLFWindow.cpp
src/platform/Vulkan/: VkBootstrap.cpp  VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanContext.cpp  VulkanFence.cpp  VulkanFrameBuffer.cpp  VulkanPipeline.cpp  VulkanQueue.cpp  VulkanResourceManager.cpp  VulkanSampler.cpp  VulkanShader.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp
test/: CMakeLists.txt
test/source/: EXAGE_test.cpp
tests/: xmake.lua
tests/src/: main.cpp
tests/src/Core/: Window.cpp
tests/src/Graphics/: Context.cpp  Queue.cpp  Swapchain.cpp
(+49 files in other folders)
